<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitCenter"
        android:src="@drawable/fond3"
        />

    <TextView
    android:id="@+id/title_movie_desc"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/title"
    android:layout_margin="10dp"
    android:textColor="@color/colorPrimary"
    android:textSize="20sp"
    />

    <TextView
        android:id="@+id/title_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="new title"
        android:layout_alignTop="@id/title_movie_desc"
        android:layout_toEndOf="@id/title_movie_desc"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="date"
        android:layout_margin="15dp"
        android:layout_alignParentEnd="true"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/director_movie_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_movie_desc"
        android:layout_alignLeft="@id/title_movie_desc"
        android:text="@string/director"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/director_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="new title"
        android:layout_alignTop="@id/director_movie_desc"
        android:layout_toEndOf="@id/director_movie_desc"
        android:layout_marginStart="10dp"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/producer_movie_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/director_movie_desc"
        android:layout_margin="10dp"
        android:text="@string/producer"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/producer_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="new title"
        android:layout_alignTop="@id/producer_movie_desc"
        android:layout_toEndOf="@id/producer_movie_desc"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_below="@id/producer_movie_desc">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_centerVertical="true"
            android:background="@drawable/desc_background">

            <TextView
                android:id="@+id/description_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="desc"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>